feat(REST): no longer require project_name and _language for registration
Now the standard project and language is used by default.
